# axum-service-template

./: Cargo.toml  Dockerfile  README.md  mkdocs.yaml
.backstage/: catalog-info.yaml
.github/workflows/: build-test.yaml  security-audit.yaml
docs/: index.md
src/: main.rs  routes.rs
