[package]
name = "${{ values.name }}"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
mimalloc = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5.0", features = ["full"] }
async-trait = "0.1.81"

[dev-dependencies]
axum-test = "16"
